--- a/app/src/main/res/layout/activity_sueno.xml
+++ b/app/src/main/res/layout/activity_sueno.xml
@@ -5,36 +5,68 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1E1E1E"
     tools:context=".activity_sueno">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/activity_sueno">
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="154dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="20dp"
+            android:text="Ciclo de Sueño"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.073" />
 
         <EditText
-            android:id="@+id/txtHoraPartido"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/txtHoraSueno"
+            android:layout_width="200dp"
+            android:layout_height="48dp"
+            android:focusable="false"
             android:hint="Selecciona hora de dormir"
-            android:focusable="false" /> <!-- Para evitar que el teclado aparezca -->
+            android:textColor="#575454"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.245" />
 
         <TextView
             android:id="@+id/txtResultado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:textColor="#FDFDFD"
             android:textSize="18sp"
-            android:paddingTop="16dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.593" />
 
         <Button
             android:id="@+id/btnsueno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Estadistica de sueño"
-            />
-    </LinearLayout>
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.476"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.915" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
