--- a/app/src/main/res/layout/activity_step_counter.xml
+++ b/app/src/main/res/layout/activity_step_counter.xml
@@ -40,12 +40,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="135dp"
             android:text="goal 12000"
             android:textColor="#ffff"
-            android:textSize="20dp"
-            android:layout_marginTop="180dp"
-            android:layout_marginLeft="100dp"
-            />
+            android:textSize="20dp" />
 
     </RelativeLayout>
 
