--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,7 +16,8 @@
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textColorLink="#FBFAFA"
-        android:textSize="12sp"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
